Fixed Ranking and CSS.

--- a/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/ranking.html
+++ b/M4_HTML_CSS_PE2_alumnes/M4_HTML_CSS_PE2 - ByApryed/ranking.html
@@ -27,37 +27,39 @@
 			</nav>
 		</header>
 		<main>
-			<h2>Ranking</h2>
-			<table>
-				<thead>
-					<tr>
-						<th colspan="2">Esports preferits pel nostre públic</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Futbòl</td>
-						<td rowspan="2"><img src="assets/img/futbol.jpg" alt="Futbòl"></td>
-					</tr>
-					<tr>
-						<td>12645 vots</td>
-					</tr>
-					<tr>
-						<td>Bàsquet</td>
-						<td rowspan="2"><img src="assets/img/basket.jpg" alt="Bàsquet"></td>
-					</tr>
-					<tr>
-						<td>9854 vots</td>
-					</tr>
-					<tr>
-						<td>Tenis</td>
-						<td rowspan="2"><img src="assets/img/tenis.jpg" alt="Tenis"></td>
-					</tr>
-					<tr>
-						<td>6524 vots</td>
-					</tr>
-				</tbody>
-			</table>
+			<section>
+				<h2>Ranking</h2>
+				<table>
+					<thead>
+						<tr>
+							<th colspan="2">Esports preferits pel nostre públic</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Futbòl</td>
+							<td rowspan="2"><img src="assets/img/futbol.jpg" alt="Futbòl"></td>
+						</tr>
+						<tr>
+							<td>12645 vots</td>
+						</tr>
+						<tr>
+							<td>Bàsquet</td>
+							<td rowspan="2"><img src="assets/img/basket.jpg" alt="Bàsquet"></td>
+						</tr>
+						<tr>
+							<td>9854 vots</td>
+						</tr>
+						<tr>
+							<td>Tenis</td>
+							<td rowspan="2"><img src="assets/img/tenis.jpg" alt="Tenis"></td>
+						</tr>
+						<tr>
+							<td>6524 vots</td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
 		</main>
 		<footer>
 			<a href="ranking.html#logo">Torna a dalt de la pàgina</a>
